--- a/Primeira_Aplicacao_Vidly/Views/Movies/Index.cshtml
+++ b/Primeira_Aplicacao_Vidly/Views/Movies/Index.cshtml
@@ -3,16 +3,24 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<table class=“table table-bordered table-hover”>
-    <h2>Filmes</h2>
 
-    @foreach (var item in Model)
-    {
+<h2>Filmes</h2>
+<table class="table table-bordered table-hover">
+    <thead>
         <tr>
-            <th>
-                @Html.ActionLink(@item.name, "Details", "Movies", new { id = @item.id }, null)
-            </th>
+            <th>Movie</th>
+            <th>Genre</th>
         </tr>
+    </thead>
+    <tbody>
+        @foreach (var movie in Model)
+        {
+            <tr>
+                
+                <td>@Html.ActionLink(movie.name, "Details", "Movies", new { id = movie.id }, null)</td>
+                <td>@movie.genre.genre</td>
+            </tr>
+        }
+    </tbody>
+    </table>
 
-    }
-</table>
